--- a/GrandBlueResortandSpa.csproj
+++ b/GrandBlueResortandSpa.csproj
@@ -134,6 +134,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BOOKING.cs">
+      <DependentUpon>GrandBlue.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\CONTACT.cs">
       <DependentUpon>GrandBlue.tt</DependentUpon>
     </Compile>
@@ -151,6 +154,9 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>GrandBlue.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\MEMBER.cs">
+      <DependentUpon>GrandBlue.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
