--- a/bin/GrandBlueResortandSpa.dll.config
+++ b/bin/GrandBlueResortandSpa.dll.config
@@ -57,7 +57,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-  <add name="GrandBlueEntities" connectionString="metadata=res://*/Models.GrandBlue.csdl|res://*/Models.GrandBlue.ssdl|res://*/Models.GrandBlue.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KAMI\SQLEXPRESS;initial catalog=GrandBlue;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="GrandBlueEntities" connectionString="metadata=res://*/Models.GrandBlue.csdl|res://*/Models.GrandBlue.ssdl|res://*/Models.GrandBlue.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3R52OF2\SQLEXPRESS;initial catalog=GrandBlue;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
