--- a/GrandBlueResortandSpa.csproj
+++ b/GrandBlueResortandSpa.csproj
@@ -128,6 +128,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ReservationController.cs" />
@@ -159,6 +160,9 @@
       <DependentUpon>GrandBlue.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\MEMBER.cs">
+      <DependentUpon>GrandBlue.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ROOM.cs">
       <DependentUpon>GrandBlue.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -360,6 +364,9 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Login\Profile.cshtml" />
     <Content Include="Views\Login\updateContact.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\Members.cshtml" />
+    <Content Include="Views\Admin\UpdateRooms.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
