--- a/Web.config
+++ b/Web.config
@@ -63,4 +63,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="GrandBlueEntities" connectionString="metadata=res://*/Models.GrandBlue.csdl|res://*/Models.GrandBlue.ssdl|res://*/Models.GrandBlue.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-034VJAB\SQLEXPRESS;initial catalog=GrandBlue;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="GrandBlueEntities" connectionString="metadata=res://*/Models.GrandBlue.csdl|res://*/Models.GrandBlue.ssdl|res://*/Models.GrandBlue.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3R52OF2\SQLEXPRESS;initial catalog=GrandBlue;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
